# back2

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py  0003_alter_user_email_alter_user_username.py  0004_alter_user_username.py  0005_alter_user_email_alter_user_username.py  0006_remove_user_username_alter_user_email.py  0007_alter_user_password.py  0008_user_endereco_user_telefone.py
hydro/: asgi.py  settings.py  urls.py  wsgi.py
