[tool.poetry]
name = "back2"
version = "0.1.0"
description = ""
authors = ["snow-sr <joaofelipi877@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-rest-framework = "^0.1.0"
django-cors-headers = "^3.13.0"
djangorestframework-simplejwt = "^5.2.2"
pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
